--- a/style.css
+++ b/style.css
@@ -7,15 +7,23 @@ xxl: 1400px;
 */
 
 @import url("./styles/section.css");
+@import url("./styles/header.css");
+@import url("./styles/hero.css");
+@import url("./styles/mision.css");
+@import url("./styles/responsive.css");
 
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+	scroll-behavior: smooth;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+		Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+		sans-serif;
 }
 
 .app--container {
-	max-width: 1800px;
+	max-width: 1600px;
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -23,96 +31,12 @@ xxl: 1400px;
 	align-items: center;
 	position: relative;
 	margin: 0 auto;
+	background-image: url("./img/bg.png");
+	background-position: top;
+	background-repeat: no-repeat;
+	background-size: auto;
 }
 
-.header {
-	width: 100%;
-	height: 100px;
+.active {
 	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	z-index: 99999;
-	position: sticky;
-	top: 0;
-	left: 0;
-	right: 0;
-	background: rgba(255, 255, 255, 0.52);
-	border-radius: 16px;
-	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-	backdrop-filter: blur(5.6px);
-	-webkit-backdrop-filter: blur(5.6px);
-}
-.header--image {
-	height: 100%;
-	aspect-ratio: 1/1;
-}
-
-.header--navigation {
-	width: 500px;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.header--navigation--li {
-	min-width: 120px;
-	text-align: center;
-	list-style: none;
-	border: 1px solid black;
-	padding: 10px 5px;
-	cursor: pointer;
-}
-.header--navigation--li--a {
-	width: 100%;
-	height: 100%;
-	color: black;
-	text-decoration: none;
-	font-size: 1rem;
-}
-
-/* MOBILE HEADER */
-.header--mobile {
-	width: 100%;
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	gap: 30px 0px;
-	position: absolute;
-	background: rgba(255, 255, 255, 0.52);
-	border-radius: 16px;
-	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-	backdrop-filter: blur(5.6px);
-	-webkit-backdrop-filter: blur(5.6px);
-}
-.header--mobile--close {
-	position: absolute;
-	right: 10px;
-	top: 10px;
-	cursor: pointer;
-	background: blue;
-	padding: 5px;
-	color: white;
-	z-index: 999;
-}
-.header--mobile--nav {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-	align-items: center;
-	gap: 30px 0px;
-}
-
-@media (max-width: 768px) {
-	.header {
-		display: none;
-	}
-}
-@media (min-width: 768px) {
-	.header--mobile {
-		display: none;
-	}
 }
