--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ xxl: 1400px;
 	align-items: center;
 	position: relative;
 	margin: 0 auto;
-	background-image: url("./img/bg.png");
+	background-image: url("./img/assets/bg.png");
 	background-position: top;
 	background-repeat: no-repeat;
 	background-size: auto;
