--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,7 @@
 .header {
 	width: 100%;
 	height: 100px;
-	padding: 0px;
+	padding: 0px 0px 10px 0px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -207,29 +207,5 @@
 @media (min-width: 768px) {
 	.header--mobile {
 		display: none;
-	}
-	.hero--section {
-		display: flex;
-		flex-direction: row;
-		justify-content: space-around;
-		align-items: flex-start;
-		padding: 0px 10rem;
-		padding-top: 10%;
-	}
-	.hero--section--info {
-		max-width: 650px;
-		padding: 20px;
-	}
-	.hero--section--info--title {
-		font-size: 8rem;
-		padding: 10px 0px;
-	}
-	.hero--section--info--text {
-		max-width: 600px;
-		font-size: 1rem;
-	}
-	.hero--section--image {
-		margin-top: 70px;
-		width: calc(300px + 4vw);
 	}
 }
