--- a/styles/services.css
+++ b/styles/services.css
@@ -16,6 +16,7 @@
 	color: rgb(37, 14, 126);
 	font-size: 4rem;
 	text-align: start;
+	margin-bottom: 50px;
 }
 .services--section--title--bg {
 	background: #6169d8;
@@ -31,57 +32,53 @@
 
 .services--section--container {
 	width: 100%;
-	max-width: 900px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
-	gap: 50px;
+	gap: 90px;
 	margin-top: 30px;
 }
 .services--section--card {
-	max-width: 360px;
+	width: 300px;
+	height: 480px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: flex-start;
-	padding: 10px 20px;
+	padding: 10px;
 	border-radius: 8px;
 	box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
 		rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
 		rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
-}
-.services--section--card--title {
-	width: 100%;
-	text-align: start;
-	padding: 15px 0px;
-	color: black;
-}
-.services--section--card--image {
-	width: 100%;
-	min-height: 200px;
-}
-.services--section--card--text {
-	padding: 20px 0px;
-	color: black;
-}
-.services--section--card--button {
+	background-image: url("../img/gea/1.jpeg");
+	background-size: cover;
+	background-position: top;
+	background-repeat: repeat-y;
 }
 
-@media (min-width: 768px) {
+.services--section--card--image {
+	width: 100%;
+	height: 100%;
+	border-radius: 4px;
+}
+
+@media (min-width: 600px) {
+	.services--section--card {
+		width: 450px;
+	}
+}
+@media (min-width: 1200px) {
 	.services--section--container {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: auto;
-		grid-gap: 20px;
+		grid-gap: 100px;
 		align-items: center;
 		justify-items: center;
 		margin-inline: auto;
 	}
-}
-
-@media (min-width: 1300px) {
-	.services--section--container {
-		grid-template-columns: repeat(3, 1fr);
+	.services--section--card {
+		width: 500px;
 	}
 }
