--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,14 +1,63 @@
-.app--footer {
+.footer {
 	width: 100%;
 	min-height: 150px;
-	background: green;
+	padding: 20px;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
+	background: #6169d9;
+	color: white;
+	gap: 30px 0px;
 }
 
-.app--footer--info--container {
+.footer--info--container {
 	width: 100%;
-	background: red;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: flex-start;
+	gap: 10px 0px;
+}
+
+.footer--info--text {
+	max-width: 360px;
+}
+
+.footer--info--contact {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 0px 10px;
+}
+.footer--info--contact--icon {
+	width: 25px;
+}
+.footer--info--contact--text {
+	font-size: 14px;
+	color: white;
+}
+.footer--info--logo {
+	display: none;
+	width: 200px;
+}
+
+@media (min-width: 700px) {
+	.footer {
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: flex-start;
+	}
+	.footer--info--container {
+		width: 40%;
+	}
+	.footer--info--logo {
+		display: flex;
+	}
+	.footer--info--contact--text {
+		font-size: 16px;
+		color: white;
+	}
 }
