--- a/styles/header.css
+++ b/styles/header.css
@@ -89,6 +89,7 @@
 	align-items: center;
 	position: relative;
 	background: white;
+	padding-bottom: 10px;
 }
 .header--mobile--nav--image {
 	height: 80px;
