--- a/styles/services.css
+++ b/styles/services.css
@@ -11,23 +11,26 @@
 }
 
 .services--section--title {
+	width: 100%;
 	z-index: 3;
 	position: relative;
 	color: rgb(37, 14, 126);
-	font-size: 4rem;
+	font-size: 40px;
 	text-align: start;
 	margin-bottom: 50px;
+	font-weight: 500;
 }
-.services--section--title--bg {
-	background: #6169d8;
-	padding: 60px;
-	border-radius: 50%;
-	position: absolute;
-	z-index: -1;
-	top: -15px;
-	left: 0px;
-}
-.services--section--title--span {
+
+.services--section--subtitle {
+	z-index: 3;
+	position: relative;
+	color: rgb(37, 14, 126);
+	border-bottom: 3px solid #ff7a6b;
+	font-size: 25px;
+	text-align: start;
+	padding-right: 20px;
+	font-weight: 500;
+	text-transform: uppercase;
 }
 
 .services--section--container {
@@ -37,15 +40,15 @@
 	justify-content: flex-start;
 	align-items: center;
 	gap: 90px;
-	margin-top: 30px;
+	margin: 30px 0px 80px 0px;
 }
 .services--section--card {
 	width: 300px;
-	height: 480px;
+	max-height: 480px;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
-	align-items: flex-start;
+	justify-content: center;
+	align-items: center;
 	padding: 10px;
 	border-radius: 8px;
 	box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
@@ -56,15 +59,42 @@
 	background-position: top;
 	background-repeat: repeat-y;
 }
+.services--section--card--special {
+	width: 300px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 10px;
+	border-radius: 8px;
+	box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+		rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+		rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+	background-image: url("../img/gea/1.jpeg");
+	background-size: contain;
+	background-position: top;
+	background-repeat: repeat-y;
+}
 
 .services--section--card--image {
 	width: 100%;
 	height: 100%;
 	border-radius: 4px;
 }
+.services--section--card--image--special {
+	width: 100%;
+	height: 100%;
+	border-radius: 4px;
+}
 
 @media (min-width: 600px) {
+	.services--section--title {
+		font-size: 60px;
+	}
 	.services--section--card {
+		width: 450px;
+	}
+	.services--section--card--special {
 		width: 450px;
 	}
 }
@@ -74,11 +104,12 @@
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: auto;
 		grid-gap: 100px;
-		align-items: center;
+		align-items: self-start;
 		justify-items: center;
 		margin-inline: auto;
 	}
-	.services--section--card {
-		width: 500px;
+	.services--section--title {
+		font-size: 80px;
+		max-width: 1000px;
 	}
 }
