--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,6 +1,6 @@
 .hero--section {
 	width: 100%;
-	min-height: 100vh;
+	min-height: 80vh;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -90,12 +90,17 @@
 		font-size: 8rem;
 		padding: 10px 0px;
 	}
-	.hero--section--info--text {
-		max-width: 600px;
-		font-size: 1rem;
-	}
+
 	.hero--section--image {
 		margin-top: 70px;
 		width: calc(300px + 4vw);
+	}
+}
+@media (min-width: 900px) {
+	.hero--section--info--text {
+		max-width: 600px;
+		font-size: 1.2rem;
+		line-height: 3rem;
+		font-weight: 700;
 	}
 }
