--- a/styles/mision.css
+++ b/styles/mision.css
@@ -54,6 +54,7 @@
 	font-weight: 700;
 	cursor: pointer;
 	font-size: 16px;
+	text-decoration: none;
 }
 .mision--section--text--link:hover {
 	color: white;
