--- a/styles/services.css
+++ b/styles/services.css
@@ -14,7 +14,7 @@
 	width: 100%;
 	z-index: 3;
 	position: relative;
-	color: rgb(37, 14, 126);
+	color: #250e7e;
 	font-size: 40px;
 	text-align: start;
 	margin-bottom: 50px;
@@ -44,7 +44,7 @@
 }
 .services--section--card {
 	width: 300px;
-	max-height: 480px;
+	max-height: 500px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -62,6 +62,7 @@
 .services--section--card--title {
 	font-size: 12px;
 	width: 100%;
+	min-height: 50px;
 	text-align: start;
 	padding-bottom: 5px;
 	font-weight: 500;
