--- a/styles/faqs.css
+++ b/styles/faqs.css
@@ -16,13 +16,13 @@
 	color: #250e7e;
 	font-size: 40px;
 	text-align: start;
-	margin-top: 50px;
+	margin: 50px 0px 20px 0px;
 	font-weight: 500;
 }
 
 .faqs--description {
 	font-size: 14px;
-	margin: 20px 0px;
+	margin: 20px 0px 50px 0px;
 }
 
 .faqs--container {
@@ -30,7 +30,7 @@
 	background-color: #250e7e;
 	color: #fff;
 	font-size: 1rem;
-	margin: 10px 0px;
+	margin: 40px 0px;
 }
 
 .faqs--faq {
