--- a/styles/services.css
+++ b/styles/services.css
@@ -31,15 +31,26 @@
 	padding-right: 20px;
 	font-weight: 500;
 	text-transform: uppercase;
+	margin: 40px 0px 20px 0px;
+}
+
+.services--section--subtitle--review {
+	width: 100%;
+	color: #250e7e;
+	font-size: 25px;
+	text-transform: uppercase;
+	text-align: center;
+	margin: 0 auto;
+	margin-top: 100px;
 }
 
 .services--section--container {
-	width: 100%;
+	width: 80%;
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
-	gap: 90px;
+	gap: 50px;
 	margin: 30px 0px 80px 0px;
 }
 .services--section--card {
@@ -58,7 +69,17 @@
 	background-size: contain;
 	background-position: top;
 	background-repeat: repeat-y;
+	transition: all 0.3s ease-in-out;
 }
+.services--section--card:hover,
+.services--section--card--special:hover {
+	transform: scale(1.03);
+	box-shadow: rgba(0, 0, 0, 0.196) 0px 1px 2px,
+		rgba(0, 0, 0, 0.196) 0px 2px 4px, rgba(0, 0, 0, 0.196) 0px 4px 8px,
+		rgba(0, 0, 0, 0.196) 0px 8px 16px, rgba(0, 0, 0, 0.196) 0px 16px 32px,
+		rgba(0, 0, 0, 0.196) 0px 32px 64px;
+}
+
 .services--section--card--title {
 	font-size: 12px;
 	width: 100%;
@@ -83,6 +104,7 @@
 	background-size: contain;
 	background-position: top;
 	background-repeat: repeat-y;
+	transition: all 0.3s ease-in-out;
 }
 
 .services--section--card--image {
@@ -100,6 +122,9 @@
 	.services--section--title {
 		font-size: 60px;
 	}
+	.services--section--subtitle--review {
+		width: 550px;
+	}
 	.services--section--card {
 		width: 450px;
 	}
@@ -115,7 +140,7 @@
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: auto;
-		grid-gap: 100px;
+		grid-gap: 200px;
 		align-items: self-start;
 		justify-items: center;
 		margin-inline: auto;
