--- a/styles/faqs.css
+++ b/styles/faqs.css
@@ -5,7 +5,7 @@
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: flex-start;
-	padding-bottom: 50px;
+	padding: 0px 20px 50px 20px;
 	background: white;
 }
 
