--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ xxl: 1400px;
 @import url("./styles/mision.css");
 @import url("./styles/faqs.css");
 @import url("./styles/services.css");
+@import url("./styles/benefits.css");
 @import url("./styles/swiper.css");
 @import url("./styles/footer.css");
 
