--- a/styles/services.css
+++ b/styles/services.css
@@ -55,7 +55,7 @@
 }
 .services--section--card {
 	width: 300px;
-	max-height: 500px;
+	min-height: 600px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -67,8 +67,8 @@
 		rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 	background-image: url("../img/gea/1.jpeg");
 	background-size: contain;
-	background-position: top;
-	background-repeat: repeat-y;
+	background-position: bottom;
+	background-repeat: no-repeat;
 	transition: all 0.3s ease-in-out;
 	margin: 0 auto;
 }
@@ -82,14 +82,22 @@
 }
 
 .services--section--card--title {
-	font-size: 12px;
+	font-size: 14px;
 	width: 100%;
 	min-height: 50px;
 	text-align: start;
-	padding-bottom: 5px;
 	font-weight: 500;
 	color: #250e7e;
 }
+
+.services--section--card--text {
+	font-size: 14px;
+	text-align: start;
+	font-weight: 300;
+	padding: 10px 5px;
+	line-height: 20px;
+}
+
 .services--section--card--special {
 	width: 300px;
 	display: flex;
@@ -125,7 +133,7 @@
 		font-size: 60px;
 	}
 	.services--section--subtitle--review {
-		width: 550px;
+		max-width: 750px;
 		text-align: center;
 	}
 	.services--section--card {
@@ -133,6 +141,7 @@
 	}
 	.services--section--card--title {
 		font-size: 14px;
+		min-height: 30px;
 	}
 	.services--section--card--special {
 		width: 450px;
