--- a/styles/services.css
+++ b/styles/services.css
@@ -67,7 +67,7 @@
 		rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 	background-image: url("../img/gea/1.jpeg");
 	background-size: contain;
-	background-position: bottom;
+	background-position: top;
 	background-repeat: no-repeat;
 	transition: all 0.3s ease-in-out;
 	margin: 0 auto;
